[package]
name = "ocrlocate"
version = "0.1.1"
authors = ["bep"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Index and search a directory of images with OCR (optical character recognition)"
repository = "https://github.com/bepvte/ocrlocate"
keywords = ["ocr", "image", "tesseract"]
categories = ["command-line-utilities", "multimedia::images"]

[features]
bundled = ["leptess/bundled"]

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["cargo", "string", "env"] }
dirs = "5.0.1"
itertools = "0.12.0"
kdam = { version = "0.5.1", features = ["rayon"] }
rayon = "1.8.1"
rusqlite = { version = "0.30.0", features = ["bundled"] }
walkdir = "2.4.0"
glob = "0.3.1"
image = { version = "0.24.8", default-features = false, features = ["webp", "png", "jpeg", "bmp", "gif"] }
tikv-jemallocator = { version = "0.5.4", features = ["unprefixed_malloc_on_supported_platforms"] }
leptonica-plumbing = { version = "1.3.0", path = "libs/leptonica-plumbing" }
leptess = { version = "0.15.0", path = "libs/leptess" }

[workspace]
members = ["libs/*"]
