[package]
name = "ocrlocate"
version = "0.2.0"
authors = ["bep"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Index and search a directory of images with OCR (optical character recognition)"
repository = "https://github.com/bepvte/ocrlocate"
keywords = ["ocr", "image", "tesseract"]
categories = ["command-line-utilities", "multimedia::images"]

[features]
default = ["regex"]
bundled = ["leptess/bundled"]
regex = ["dep:regex", "rusqlite/functions"]

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["cargo", "wrap_help", "env"] }
dirs = "5.0.1"
itertools = "0.12.0"
kdam = { version = "0.5.1", features = ["rayon"] }
rayon = "1.8.1"
rusqlite = { version = "0.30.0", features = ["bundled"] }
walkdir = "2.4.0"
glob = "0.3.1"
leptonica-plumbing = { version = "1.3.0", path = "libs/leptonica-plumbing" }
leptess = { version = "0.15.0", path = "libs/leptess", default-features = false }
camino = "1.1.6"
imagesize = "0.12.0"
regex = { version = "1.10.3", optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5.4", features = ["unprefixed_malloc_on_supported_platforms"] }

# [workspace]
# members = ["libs/*"]

[profile.release]
opt-level = 3
strip = false
debug = 1     # for perf analysis
lto = "thin"

[dev-dependencies]
tempfile = "3.9.0"
